add translation to locales

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,3 +1,32 @@
 {
-    "title": "title"
-  }
+  "currentLang": "English",
+  "translation": "Translation",
+  "practice": "Practice",
+  "easy": "Easy",
+  "hard": "Hard",
+  "backtotitle": "Back to title",
+  "playAgain": "Play again",
+  "yourName": "Your name",
+  "submit": "Submit",
+  "sendAgain": "Send again",
+  "registerScore": "Register score",
+  "start": "Start",
+  "highScore": "High Score",
+  "name": "Name",
+  "score": "Score",
+  "congrats": "Congrats!",
+  "rank_ordinal_one": "You've ranked in at {{count}}st place!",
+  "rank_ordinal_two": "You've ranked in at {{count}}nd place!",
+  "rank_ordinal_few": "You've ranked in at {{count}}rd place!",
+  "rank_ordinal_other": "You've ranked in at {{count}}st place!",
+  "verticalZhuyin": "Vertical Zhuyin",
+  "hideZhuyin": "Hide Zhuyin",
+  "socialMessage_one": "You've got a {{count}} point!",
+  "socialMessage_other": "You've got {{count}} points!",
+  "english": "English",
+  "japanese": "Japanese",
+  "title": "Bopomofo Typer(beta)",
+  "tag": "BopomofoTyper",
+  "zhuyinDescriptionTitle": "What is Bopomofo?",
+  "zhuyinDescriptionText": "Bopomofo, also known as Zhuyin Fuhao, is a unique script used predominantly in Taiwan. It serves as a phonetic script, aiding in the learning of traditional Chinese characters, alongside pinyin. Bopomofo plays a crucial role in language education and daily writing in Taiwan."
+}
