--- a/locales/ja.json
+++ b/locales/ja.json
@@ -1,3 +1,28 @@
 {
-    "title": "タイトル"
-  }
+  "currentLang": "日本語（変換モードを直接入力にして下さい）",
+  "translation": "翻訳",
+  "practice": "れんしゅう",
+  "easy": "かんたん",
+  "hard": "むずかしい",
+  "backtotitle": "タイトルに戻る",
+  "playAgain": "もう一回遊ぶ",
+  "yourName": "名前を入力",
+  "submit": "送信",
+  "sendAgain": "もう一度送信",
+  "registerScore": "スコアを登録",
+  "start": "スタート",
+  "highScore": "ハイスコア",
+  "name": "名前",
+  "score": "スコア",
+  "congrats": "やったね！",
+  "rank": "{{count}}位にランクインしました！",
+  "verticalZhuyin": "注音縦モード",
+  "hideZhuyin": "注音を隠す",
+  "socialMessage": "あなたの得点は{{count}}点でした！",
+  "english": "英語",
+  "japanese": "日本語",
+  "title": "ボポモフォたいぱあ（ベータ版）",
+  "tag": "ボポモフォたいぱあ",
+  "zhuyinDescriptionTitle": "ボポモフォとは？",
+  "zhuyinDescriptionText": "ボポモフォ（Bopomofo）は、台湾で主に使用されている文字の一つで、注音符号とも呼ばれています。これは、漢字や注音符号など、伝統的な漢字の学習に役立つために開発された、特有の文字体系です。ボポモフォは、主に台湾で広く普及しており、言語教育や日常の文章の書き方において非常に重要な役割を果たしています。"
+}
